terraform/istio-1.0.5/dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: test
  name: httptest-deployment
  labels:
    app: httptest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httptest
  template:
    metadata:
      labels:
        app: httptest
    spec:
      containers:
      - name: httptest
        image: turingml/testhttp:latest
        ports:
        - containerPort: 80
