terraform/istio-1.0.5/svc.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: httptest
  namespace: test
  labels:
    app: testhttp
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: httptest
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
