terraform/istio-1.0.5/tot.yaml
apiVersion: v1
kind: Service
metadata:
  name: testhttp
  labels:
    app: testhttp
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: testhttp
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: testhttp-v1
spec:
  replicas: 4
  template:
    metadata:
      labels:
        app: testhttp
        version: v1
    spec:
      containers:
      - name: testhttp
        image: turingml/testhttp:latest
        resources:
          requests:
            memory: "512Mi"
            cpu: "1000m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
        imagePullPolicy: Always
        ports:
        - containerPort: 80
