terraform/istio-1.0.5/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: testhttp-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testhttp
spec:
  hosts:
  - "*"
  gateways:
  - testhttp-gateway
  http:
  - match:
    - uri:
        prefix: /test/
    route:
    - destination:
        host: testhttp
        port:
          number: 80
